URL creation by URI.toURL() method